--- a/world.css
+++ b/world.css
@@ -1,1 +1,70 @@
 /* Add your own styles */
+.header {
+    background-color: rgb(11, 9, 110);
+    color:rgb(120, 178, 235);
+    padding: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+
+}
+h1{
+    float: right;
+  text-align: center;
+    font-size: 400%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.headerimage{
+    float: left;
+    overflow: hidden;
+    height: 250px;
+    padding-top: 35px;
+    align-items: center;
+}
+
+#controls{
+    display: flex; 
+    text-align: center;
+    flex-direction: column;
+}
+
+#btn{
+    display: inline;
+    margin-top: 10px;
+}
+
+#city {
+    background-color: rgb(108, 41, 10);
+    color: #fff;
+    height: 40px;
+    width: 150px;
+    border-radius: 5%;
+    margin-left: 10px;
+    align-self: center;
+   
+}
+
+   
+
+#lookup {
+    background-color: rgb(145, 82, 23);
+    color: white;
+    height: 40px;
+    width: 150px;
+    border-radius: 5%;
+    margin-left: 10px;
+    align-self: center;
+}
+
+#country{
+    height: 50px;
+    width: 600px;
+    align-self: center;
+    
+}
+label{
+    font-size: larger;
+}
